# speech-to-speech-core

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benchmarks/: __init__.py  run_latency_benchmark.py
src/: __init__.py  app.py  audio_input.py  cli.py  config.py  latency_logger.py  logging_config.py  responder.py  synthesize.py  transcribe.py  turn_controller.py  utils.py
tests/: __init__.py  test_app.py  test_audio_input.py  test_cli.py  test_latency_logger.py  test_responder.py  test_synthesize.py  test_transcribe.py  test_turn_controller.py  test_utils.py
