[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "speech-to-speech-core"
version = "0.1.0"
description = "Modular speech-to-speech prototype with local STT, response, and TTS stages."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "sounddevice>=0.4.6",
  "numpy>=1.24.0",
  "scipy>=1.11.0",
  "torch>=2.0.0",
  "faster-whisper>=1.1.1",
  "silero-vad>=5.1.2",
  "pyttsx3>=2.90",
  "loguru>=0.7.2",
  "typer>=0.12.3",
  "rich>=13.7.1",
]

[project.scripts]
speech-to-speech = "cli:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pre-commit>=3.8.0",
  "ruff>=0.7.0",
  "black>=24.8.0",
  "isort>=5.13.2",
  "mypy>=1.11.2",
  "pyright>=1.1.390",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pre-commit>=3.8.0",
  "ruff>=0.7.0",
  "black>=24.8.0",
  "isort>=5.13.2",
  "mypy>=1.11.2",
  "pyright>=1.1.390",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
include = ["src/**/*.py"]

[tool.hatch.build.targets.sdist]
include = [
  "src/**/*.py",
  "tests/**/*.py",
  ".github/workflows/*.yml",
  ".pre-commit-config.yaml",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/app.py" = ["E402"]
"benchmarks/run_latency_benchmark.py" = ["E402"]
"tests/*.py" = ["E402", "F841"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true
files = ["src", "tests"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = false
reportReturnType = false
reportAttributeAccessIssue = false
